--- a/index.html
+++ b/index.html
@@ -23,9 +23,45 @@
   </head>
   <body>
     <div class="container">
-    <div class="row">
-    <div class="col-sm-12">
-    Navigation Bar
+        <div class="row">
+        <div class="col-sm-12">
+        <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Exceptional Realty</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">New Properties</a></li>
+            <li><a href="#">Listings</a></li>
+            <li><a href="#">Market Report</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#" target="_blank">H.U.D</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="twitter.com">Twitter</a></li>
+            <li><a href="facebook.com">Facebook</a></li>
+            <li><a href="google.com">Google Plus</a></li>
+
+              </ul>
+            </li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
     </div>
     <div class="col-sm-12">
     <figure>
